--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
   "login": {
-    "welcome_back": "Welcome Back!",
+    "welcome_back": "Welcome Baaaack!",
     "email_placeholder": "Email address",
     "password_placeholder": "Password",
     "forget_password": "Forget Password?",
