feat: add HTML and Java course levels 1 to 5 with components and routing; update translations for future implementation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -468,5 +468,8 @@
       "show_profile": "Show Profile",
       "change_pick_button": "Change Profile Picture"
     }
+  },
+  "futura_implementacion":{
+    "title": "This level will be available soon!"
   }
 }
